--- a/.github/workflows/classroom.yaml
+++ b/.github/workflows/classroom.yaml
@@ -12,5 +12,8 @@ jobs:
     name: Autograding
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
+          token: ${{ secrets.MY_PAT }}
       - uses: education/autograding@v1
