--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "extra"]
 	path = extra
-	url = git@github.com:tatsy/1284-sds-lib-advml.git
+	url = https://github.com/tatsy/1284-sds-lib-advml.git
