--- a/.github/workflows/classroom.yaml
+++ b/.github/workflows/classroom.yaml
@@ -13,7 +13,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          submodules: true
-          token: ${{ secrets.MY_PAT }}
-      - uses: education/autograding@v1
+      - name: Autograding
+        uses: tatsy-classes/sudoku-autograding@main
