--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,6 +1,6 @@
 name: GitHub Classroom Workflow
 
-on: 
+on:
   - push
   - workflow_dispatch
 
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.10"
           cache: "pip"
@@ -27,5 +27,282 @@ jobs:
           pip install --quiet -r requirements.txt
       - name: Generate problems
         uses: tatsy-classes/sudoku-autograding@main
-      - name: Autograding
-        uses: education/autograding@v1
+
+      - name: Level1-1
+        id: level101
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "Level1-1"
+          command: "pytest --path check/level1/level1_1.jpg"
+          timeout: "0.25"
+          max-score: "1"
+      - name: Level1-2
+        id: level102
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "Level1-2"
+          command: "pytest --path check/level1/level1_2.jpg"
+          timeout: "0.25"
+          max-score: "1"
+      - name: Level1-3
+        id: level103
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "Level1-3"
+          command: "pytest --path check/level1/level1_3.jpg"
+          timeout: "0.25"
+          max-score: "1"
+      - name: Level1-4
+        id: level104
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "Level1-4"
+          command: "pytest --path check/level1/level1_4.jpg"
+          timeout: "0.25"
+          max-score: "1"
+      - name: Level1-5
+        id: level105
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "Level1-5"
+          command: "pytest --path check/level1/level1_5.jpg"
+          timeout: "0.25"
+          max-score: "1"
+      - name: Level1-6
+        id: level106
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "Level1-6"
+          command: "pytest --path check/level1/level1_6.jpg"
+          timeout: "0.25"
+          max-score: "1"
+      - name: Level1-7
+        id: level107
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "Level1-7"
+          command: "pytest --path check/level1/level1_7.jpg"
+          timeout: "0.25"
+          max-score: "1"
+      - name: Level1-8
+        id: level108
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "Level1-8"
+          command: "pytest --path check/level1/level1_8.jpg"
+          timeout: "0.25"
+          max-score: "1"
+      - name: Level1-9
+        id: level109
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "Level1-9"
+          command: "pytest --path check/level1/level1_9.jpg"
+          timeout: "0.25"
+          max-score: "1"
+      - name: Level1-10
+        id: level110
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "Level1-10"
+          command: "pytest --path check/level1/level1_10.jpg"
+          timeout: "0.25"
+          max-score: "1"
+
+      - name: level2-1
+        id: level201
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level2-1"
+          command: "pytest --path check/level2/level2_1.jpg"
+          timeout: "0.25"
+          max-score: "2"
+      - name: level2-2
+        id: level202
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level2-2"
+          command: "pytest --path check/level2/level2_2.jpg"
+          timeout: "0.25"
+          max-score: "2"
+      - name: level2-3
+        id: level203
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level2-3"
+          command: "pytest --path check/level2/level2_3.jpg"
+          timeout: "0.25"
+          max-score: "2"
+      - name: level2-4
+        id: level204
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level2-4"
+          command: "pytest --path check/level2/level2_4.jpg"
+          timeout: "0.25"
+          max-score: "2"
+      - name: level2-5
+        id: level205
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level2-5"
+          command: "pytest --path check/level2/level2_5.jpg"
+          timeout: "0.25"
+          max-score: "2"
+      - name: level2-6
+        id: level206
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level2-6"
+          command: "pytest --path check/level2/level2_6.jpg"
+          timeout: "0.25"
+          max-score: "2"
+      - name: level2-7
+        id: level207
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level2-7"
+          command: "pytest --path check/level2/level2_7.jpg"
+          timeout: "0.25"
+          max-score: "2"
+      - name: level2-8
+        id: level208
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level2-8"
+          command: "pytest --path check/level2/level2_8.jpg"
+          timeout: "0.25"
+          max-score: "2"
+      - name: level2-9
+        id: level209
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level2-9"
+          command: "pytest --path check/level2/level2_9.jpg"
+          timeout: "0.25"
+          max-score: "2"
+      - name: level2-10
+        id: level210
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level2-10"
+          command: "pytest --path check/level2/level2_10.jpg"
+          timeout: "0.25"
+          max-score: "2"
+
+      - name: level3-1
+        id: level301
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level3-1"
+          command: "pytest --path check/level3/level3_1.jpg"
+          timeout: "0.25"
+          max-score: "3"
+      - name: level3-2
+        id: level302
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level3-2"
+          command: "pytest --path check/level3/level3_2.jpg"
+          timeout: "0.25"
+          max-score: "3"
+      - name: level3-3
+        id: level303
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level3-3"
+          command: "pytest --path check/level3/level3_3.jpg"
+          timeout: "0.25"
+          max-score: "3"
+      - name: level3-4
+        id: level304
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level3-4"
+          command: "pytest --path check/level3/level3_4.jpg"
+          timeout: "0.25"
+          max-score: "3"
+      - name: level3-5
+        id: level305
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level3-5"
+          command: "pytest --path check/level3/level3_5.jpg"
+          timeout: "0.25"
+          max-score: "3"
+      - name: level3-6
+        id: level306
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level3-6"
+          command: "pytest --path check/level3/level3_6.jpg"
+          timeout: "0.25"
+          max-score: "3"
+      - name: level3-7
+        id: level307
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level3-7"
+          command: "pytest --path check/level3/level3_7.jpg"
+          timeout: "0.25"
+          max-score: "3"
+      - name: level3-8
+        id: level308
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level3-8"
+          command: "pytest --path check/level3/level3_8.jpg"
+          timeout: "0.25"
+          max-score: "3"
+      - name: level3-9
+        id: level309
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level3-9"
+          command: "pytest --path check/level3/level3_9.jpg"
+          timeout: "0.25"
+          max-score: "3"
+      - name: level3-10
+        id: level310
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: "level3-10"
+          command: "pytest --path check/level3/level3_10.jpg"
+          timeout: "0.25"
+          max-score: "3"
+
+      - name: Autograding Reporter
+        uses: classroom-resources/autograding-grading-reporter@v1
+        env:
+          LEVEL101_RESULTS: "${{ steps.level101.outputs.result }}"
+          LEVEL102_RESULTS: "${{ steps.level102.outputs.result }}"
+          LEVEL103_RESULTS: "${{ steps.level103.outputs.result }}"
+          LEVEL104_RESULTS: "${{ steps.level104.outputs.result }}"
+          LEVEL105_RESULTS: "${{ steps.level105.outputs.result }}"
+          LEVEL106_RESULTS: "${{ steps.level106.outputs.result }}"
+          LEVEL107_RESULTS: "${{ steps.level107.outputs.result }}"
+          LEVEL108_RESULTS: "${{ steps.level108.outputs.result }}"
+          LEVEL109_RESULTS: "${{ steps.level109.outputs.result }}"
+          LEVEL110_RESULTS: "${{ steps.level110.outputs.result }}"
+          LEVEL201_RESULTS: "${{ steps.level201.outputs.result }}"
+          LEVEL202_RESULTS: "${{ steps.level202.outputs.result }}"
+          LEVEL203_RESULTS: "${{ steps.level203.outputs.result }}"
+          LEVEL204_RESULTS: "${{ steps.level204.outputs.result }}"
+          LEVEL205_RESULTS: "${{ steps.level205.outputs.result }}"
+          LEVEL206_RESULTS: "${{ steps.level206.outputs.result }}"
+          LEVEL207_RESULTS: "${{ steps.level207.outputs.result }}"
+          LEVEL208_RESULTS: "${{ steps.level208.outputs.result }}"
+          LEVEL209_RESULTS: "${{ steps.level209.outputs.result }}"
+          LEVEL210_RESULTS: "${{ steps.level210.outputs.result }}"
+          LEVEL301_RESULTS: "${{ steps.level301.outputs.result }}"
+          LEVEL302_RESULTS: "${{ steps.level302.outputs.result }}"
+          LEVEL303_RESULTS: "${{ steps.level303.outputs.result }}"
+          LEVEL304_RESULTS: "${{ steps.level304.outputs.result }}"
+          LEVEL305_RESULTS: "${{ steps.level305.outputs.result }}"
+          LEVEL306_RESULTS: "${{ steps.level306.outputs.result }}"
+          LEVEL307_RESULTS: "${{ steps.level307.outputs.result }}"
+          LEVEL308_RESULTS: "${{ steps.level308.outputs.result }}"
+          LEVEL309_RESULTS: "${{ steps.level309.outputs.result }}"
+          LEVEL310_RESULTS: "${{ steps.level310.outputs.result }}"
+        with:
+          runners: level101,level102,level103,level104,level105,level106,level107,level108,level109,level110,level201,level202,level203,level204,level205,level206,level207,level208,level209,level210,level301,level302,level303,level304,level305,level306,level307,level308,level309,level310
