--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -10,10 +10,8 @@ permissions:
   contents: read
 
 jobs:
-  build:
-    name: Autograding
+  autograding:
     runs-on: ubuntu-latest
-    if: github.actor != 'github-classroom[bot]'
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python
