--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,4 +1,4 @@
-name: GitHub Classroom Workflow
+name: Autograding Tests
 
 on:
   - push
@@ -14,264 +14,275 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
           cache: "pip"
+
       - name: Install dependencies
         run: |
           python -m pip install --quiet --upgrade pip
           pip install --quiet -r requirements.txt
+
       - name: Generate problems
         uses: tatsy-classes/sudoku-autograding@main
 
       - name: Level1-1
         id: level101
-        uses: classroom-resources/autograding-command-grader@v1
+        uses: education/autograding-command-grader@v1
         with:
-          test-name: "Level1-1"
-          command: "pytest --path check/level1/level1_1.jpg"
-          timeout: "0.25"
-          max-score: "1"
+          test-name: Level1-1
+          command: pytest --path check/level1/level1_1.jpg
+          timeout: 1
+          max-score: 1
       - name: Level1-2
         id: level102
-        uses: classroom-resources/autograding-command-grader@v1
+        uses: education/autograding-command-grader@v1
         with:
-          test-name: "Level1-2"
-          command: "pytest --path check/level1/level1_2.jpg"
-          timeout: "0.25"
-          max-score: "1"
+          test-name: Level1-2
+          command: pytest --path check/level1/level1_2.jpg
+          timeout: 1
+          max-score: 1
       - name: Level1-3
         id: level103
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "Level1-3"
-          command: "pytest --path check/level1/level1_3.jpg"
-          timeout: "0.25"
-          max-score: "1"
+          test-name: Level1-3
+          command: pytest --path check/level1/level1_3.jpg
+          timeout: 0.25
+          max-score: 1
       - name: Level1-4
         id: level104
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "Level1-4"
-          command: "pytest --path check/level1/level1_4.jpg"
-          timeout: "0.25"
-          max-score: "1"
+          test-name: Level1-4
+          command: pytest --path check/level1/level1_4.jpg
+          timeout: 0.25
+          max-score: 1
       - name: Level1-5
         id: level105
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "Level1-5"
-          command: "pytest --path check/level1/level1_5.jpg"
-          timeout: "0.25"
-          max-score: "1"
+          test-name: Level1-5
+          command: pytest --path check/level1/level1_5.jpg
+          timeout: 0.25
+          max-score: 1
       - name: Level1-6
         id: level106
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "Level1-6"
-          command: "pytest --path check/level1/level1_6.jpg"
-          timeout: "0.25"
-          max-score: "1"
+          test-name: Level1-6
+          command: pytest --path check/level1/level1_6.jpg
+          timeout: 0.25
+          max-score: 1
       - name: Level1-7
         id: level107
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "Level1-7"
-          command: "pytest --path check/level1/level1_7.jpg"
-          timeout: "0.25"
-          max-score: "1"
+          test-name: Level1-7
+          command: pytest --path check/level1/level1_7.jpg
+          timeout: 0.25
+          max-score: 1
       - name: Level1-8
         id: level108
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "Level1-8"
-          command: "pytest --path check/level1/level1_8.jpg"
-          timeout: "0.25"
-          max-score: "1"
+          test-name: Level1-8
+          command: pytest --path check/level1/level1_8.jpg
+          timeout: 0.25
+          max-score: 1
       - name: Level1-9
         id: level109
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "Level1-9"
-          command: "pytest --path check/level1/level1_9.jpg"
-          timeout: "0.25"
-          max-score: "1"
+          test-name: Level1-9
+          command: pytest --path check/level1/level1_9.jpg
+          timeout: 0.25
+          max-score: 1
       - name: Level1-10
         id: level110
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "Level1-10"
-          command: "pytest --path check/level1/level1_10.jpg"
-          timeout: "0.25"
-          max-score: "1"
+          test-name: Level1-10
+          command: pytest --path check/level1/level1_10.jpg
+          timeout: 0.25
+          max-score: 1
 
       - name: level2-1
         id: level201
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level2-1"
-          command: "pytest --path check/level2/level2_1.jpg"
-          timeout: "0.25"
-          max-score: "2"
+          test-name: level2-1
+          command: pytest --path check/level2/level2_1.jpg
+          timeout: 0.25
+          max-score: 2
       - name: level2-2
         id: level202
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level2-2"
-          command: "pytest --path check/level2/level2_2.jpg"
-          timeout: "0.25"
-          max-score: "2"
+          test-name: level2-2
+          command: pytest --path check/level2/level2_2.jpg
+          timeout: 0.25
+          max-score: 2
       - name: level2-3
         id: level203
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level2-3"
-          command: "pytest --path check/level2/level2_3.jpg"
-          timeout: "0.25"
-          max-score: "2"
+          test-name: level2-3
+          command: pytest --path check/level2/level2_3.jpg
+          timeout: 0.25
+          max-score: 2
       - name: level2-4
         id: level204
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level2-4"
-          command: "pytest --path check/level2/level2_4.jpg"
-          timeout: "0.25"
-          max-score: "2"
+          test-name: level2-4
+          command: pytest --path check/level2/level2_4.jpg
+          timeout: 0.25
+          max-score: 2
       - name: level2-5
         id: level205
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level2-5"
-          command: "pytest --path check/level2/level2_5.jpg"
-          timeout: "0.25"
-          max-score: "2"
+          test-name: level2-5
+          command: pytest --path check/level2/level2_5.jpg
+          timeout: 0.25
+          max-score: 2
       - name: level2-6
         id: level206
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level2-6"
-          command: "pytest --path check/level2/level2_6.jpg"
-          timeout: "0.25"
-          max-score: "2"
+          test-name: level2-6
+          command: pytest --path check/level2/level2_6.jpg
+          timeout: 0.25
+          max-score: 2
       - name: level2-7
         id: level207
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level2-7"
-          command: "pytest --path check/level2/level2_7.jpg"
-          timeout: "0.25"
-          max-score: "2"
+          test-name: level2-7
+          command: pytest --path check/level2/level2_7.jpg
+          timeout: 0.25
+          max-score: 2
       - name: level2-8
         id: level208
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level2-8"
-          command: "pytest --path check/level2/level2_8.jpg"
-          timeout: "0.25"
-          max-score: "2"
+          test-name: level2-8
+          command: pytest --path check/level2/level2_8.jpg
+          timeout: 0.25
+          max-score: 2
       - name: level2-9
         id: level209
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level2-9"
-          command: "pytest --path check/level2/level2_9.jpg"
-          timeout: "0.25"
-          max-score: "2"
+          test-name: level2-9
+          command: pytest --path check/level2/level2_9.jpg
+          timeout: 0.25
+          max-score: 2
       - name: level2-10
         id: level210
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level2-10"
-          command: "pytest --path check/level2/level2_10.jpg"
-          timeout: "0.25"
-          max-score: "2"
+          test-name: level2-10
+          command: pytest --path check/level2/level2_10.jpg
+          timeout: 0.25
+          max-score: 2
 
       - name: level3-1
         id: level301
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level3-1"
-          command: "pytest --path check/level3/level3_1.jpg"
-          timeout: "0.25"
-          max-score: "3"
+          test-name: level3-1
+          command: pytest --path check/level3/level3_1.jpg
+          timeout: 0.25
+          max-score: 3
       - name: level3-2
         id: level302
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level3-2"
-          command: "pytest --path check/level3/level3_2.jpg"
-          timeout: "0.25"
-          max-score: "3"
+          test-name: level3-2
+          command: pytest --path check/level3/level3_2.jpg
+          timeout: 0.25
+          max-score: 3
       - name: level3-3
         id: level303
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level3-3"
-          command: "pytest --path check/level3/level3_3.jpg"
-          timeout: "0.25"
-          max-score: "3"
+          test-name: level3-3
+          command: pytest --path check/level3/level3_3.jpg
+          timeout: 0.25
+          max-score: 3
       - name: level3-4
         id: level304
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level3-4"
-          command: "pytest --path check/level3/level3_4.jpg"
-          timeout: "0.25"
-          max-score: "3"
+          test-name: level3-4
+          command: pytest --path check/level3/level3_4.jpg
+          timeout: 0.25
+          max-score: 3
       - name: level3-5
         id: level305
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level3-5"
-          command: "pytest --path check/level3/level3_5.jpg"
-          timeout: "0.25"
-          max-score: "3"
+          test-name: level3-5
+          command: pytest --path check/level3/level3_5.jpg
+          timeout: 0.25
+          max-score: 3
       - name: level3-6
         id: level306
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level3-6"
-          command: "pytest --path check/level3/level3_6.jpg"
-          timeout: "0.25"
-          max-score: "3"
+          test-name: level3-6
+          command: pytest --path check/level3/level3_6.jpg
+          timeout: 0.25
+          max-score: 3
       - name: level3-7
         id: level307
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level3-7"
-          command: "pytest --path check/level3/level3_7.jpg"
-          timeout: "0.25"
-          max-score: "3"
+          test-name: level3-7
+          command: pytest --path check/level3/level3_7.jpg
+          timeout: 0.25
+          max-score: 3
       - name: level3-8
         id: level308
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level3-8"
-          command: "pytest --path check/level3/level3_8.jpg"
-          timeout: "0.25"
-          max-score: "3"
+          test-name: level3-8
+          command: pytest --path check/level3/level3_8.jpg
+          timeout: 0.25
+          max-score: 3
       - name: level3-9
         id: level309
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level3-9"
-          command: "pytest --path check/level3/level3_9.jpg"
-          timeout: "0.25"
-          max-score: "3"
+          test-name: level3-9
+          command: pytest --path check/level3/level3_9.jpg
+          timeout: 0.25
+          max-score: 3
       - name: level3-10
         id: level310
         uses: classroom-resources/autograding-command-grader@v1
         with:
-          test-name: "level3-10"
-          command: "pytest --path check/level3/level3_10.jpg"
-          timeout: "0.25"
-          max-score: "3"
+          test-name: level3-10
+          command: pytest --path check/level3/level3_10.jpg
+          timeout: 0.25
+          max-score: 3
+
+      - name: Check
+        run: |
+          echo $GITHUB_REPOSITORY
+          echo $GITHUB_RUN_ID
 
       - name: Autograding Reporter
-        uses: classroom-resources/autograding-grading-reporter@v1
+        uses: education/autograding-grading-reporter@v1
         env:
+          GITHUB_REPOSITORY: $GITHUB_REPOSITORY
+          GITHUB_RUN_ID: $GITHUB_RUN_ID
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LEVEL101_RESULTS: "${{ steps.level101.outputs.result }}"
           LEVEL102_RESULTS: "${{ steps.level102.outputs.result }}"
           LEVEL103_RESULTS: "${{ steps.level103.outputs.result }}"
