--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,4 +1,4 @@
-name: Autograding Tests
+name: Autograding sudoku exercises
 
 on:
   - push
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --quiet --upgrade pip
-          pip install --quiet -r requirements.txt
+          python -m pip install --quiet -r requirements.txt
 
       - name: Generate problems
         uses: tatsy-classes/sudoku-autograding@main
